BL-2142 Fix some source bubble glitches
* update csproj file with correct test file location
* make qtipOverrides not override too much
* change min-height of a bubble to fit a one line text
   even when the textbox was shorter than a bubble
* strip out CustomPage style changes before making bubbles

--- a/src/BloomBrowserUI/bookEdit/css/editMode.less
+++ b/src/BloomBrowserUI/bookEdit/css/editMode.less
@@ -287,7 +287,7 @@ TEXTAREA.province
 		padding: 0 9px 9px !important; // even up space around source bubbles
 		// Qtip defaults to overflow: hidden, which masks the extra language dropdown
 		&:hover {
-			overflow: visible;
+			overflow: visible !important;
 		}
 	}
 }
@@ -396,7 +396,6 @@ TEXTAREA.province
 	white-space: nowrap;
 	border: 1px solid @TabBorder;
 	background-color: @DropdownBackground !important; // !important is needed to override a rule in editPaneGlobal.css
-	right: 0;
 	top: 0;
 	font-size: 9pt;
 	z-index: 5;
